# ZleedQt

./: CMakeLists.txt  README.md
res/: qtquickcontrols2.conf  resources.qrc
res/ui/: main.qml
src/: main.cpp
